Fix: cards broken layout

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -105,17 +105,17 @@ body {
     grid-column-end: 3;
   }
 
-  .card:nth-child(1) {
+  .card.card--tombolone:nth-child(1) {
     grid-row-start: 1;
     grid-row-end: 2;
   }
 
-  .card:nth-child(2) {
+  .card.card--tombolone:nth-child(2) {
     grid-row-start: 2;
     grid-row-end: 3;
   }
 
-  .card:nth-child(3) {
+  .card.card--tombolone:nth-child(3) {
     grid-row-start: 3;
     grid-row-end: 4;
   }
